# gitpilot

./: .env.template  .gitignore  .pypirc.template  .vercelignore  AUTHENTICATION.md  CHANGELOG.md  FRONTEND_CODE_REFERENCE.md  LICENSE  MANIFEST.in  Makefile  OAUTH_SETUP.md  PACKAGING.md  PRODUCTION.md  QUICKSTART.md  README.md  VERCEL_DEPLOYMENT.md  pyproject.toml  vercel.json
.github/workflows/: release.yml
api/: __init__.py  index.py
docs/: CONFIGURE_GITPILOTA_APP.md  ENTERPRISE_LOGIN.md  FIX_GITHUB_APP_PERMISSIONS.md  GITHUB_APP_SETUP.md  GITHUB_SETUP.md  README.md
frontend/: App.jsx  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/components/: AssistantMessage.jsx  ChatPanel.jsx  FileTree.jsx  FlowViewer.jsx  Footer.jsx  GithubConnectPanel.jsx  LlmSettings.jsx  LoginPage.jsx  PlanView.jsx  ProjectContextPanel.jsx  RepoSelector.jsx  SettingsModal.jsx  SetupWizard.jsx  UserMenu.jsx  WelcomePage.jsx
frontend/utils/: api.js
gitpilot/: __init__.py  agent_tools.py  agentic.py  api.py  auth.py  cli.py  github_api.py  github_app.py  github_oauth.py  langflow_client.py  llm_provider.py  model_catalog.py  settings.py
gitpilot/web/: index.html
gitpilot/web/assets/: index-9w27hobx.js  index-9zjWuJ2h.js  index-B_LPi2v6.css  index-B_m1E28E.js  index-B_n903xL.js  index-BoqZ3pdi.js  index-CWw57VMY.css  index-CwxpaUAS.css  index-CyrL1PwN.js  index-DGTtjvG0.js  index-DUWU2ydx.css  index-DmqKXrvZ.js  index-DoNETNQ4.css  index-Dt9xNhFU.js  index-Dv4lzpVr.js  index-Dz9nL3yw.css  index-DzbDjkUp.js  index-RZ20mey-.css  index-a5ofe7cN.css  index-ihC8QwPk.css  index-pcmePh7r.css
